--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "planner",
     "GPS"
   ],
+  "resolutions": {
+    "angular": "^1.7.9",
+    "minimist": "^1.2.3"
+  },
   "devDependencies": {
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
@@ -29,7 +33,7 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
     "mkdirp": "^1.0.3",
-    "protractor": "^5.1.1",
+    "protractor": "^5.3.0",
     "q": "^1.4.1",
     "rimraf": "^2.5.1",
     "shelljs": "^0.8.1",
