--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,46 +16,41 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {
-    "angular": "^1.7.9",
-    "minimist": "^1.2.3",
-    "yargs-parser": "13.1.2"
-  },
   "devDependencies": {
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
     "firefox-profile": "^1.0.0",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.1",
-    "karma": "^4.2.0",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.2",
     "karma-junit-reporter": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
     "mkdirp": "^1.0.3",
-    "protractor": "^5.4.4",
+    "protractor": "^7.0.0",
     "q": "^1.4.1",
-    "rimraf": "^2.5.1",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.1",
     "uglify-js": "^3.5.0"
   },
   "dependencies": {
-    "angular": "^1.7.9",
-    "angular-animate": "^1.7.9",
+    "angular": "^1.8.0",
+    "angular-animate": "^1.8.0",
     "angular-bootstrap-confirm": "^2.5.1",
-    "angular-cookies": "^1.7.9",
+    "angular-cookies": "^1.8.0",
     "angular-file-saver": "^1.1.3",
-    "angular-i18n": "^1.7.9",
+    "angular-i18n": "^1.8.0",
     "angular-jwt": "^0.1.9",
-    "angular-loader": "^1.7.9",
-    "angular-messages": "^1.7.9",
-    "angular-mocks": "^1.7.9",
+    "angular-loader": "^1.8.0",
+    "angular-messages": "^1.8.0",
+    "angular-mocks": "^1.8.0",
     "angular-pagedown": "kennyki/angular-pagedown#0.4.4",
     "angular-paging": "^2.2.2",
-    "angular-resource": "^1.7.9",
-    "angular-route": "^1.7.9",
-    "angular-sanitize": "^1.7.9",
+    "angular-resource": "^1.8.0",
+    "angular-route": "^1.8.0",
+    "angular-sanitize": "^1.8.0",
     "angular-simple-logger": "^0.1.4",
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.2.0",
@@ -99,7 +94,7 @@
     "env": "env",
     "clean": "rimraf dist",
     "lint": "jshint app/js/*.js app/js/**/*.js test/**/*.js",
-    "prebuild": "mkdirp dist/app/partials --mode 0775 && mkdirp dist/app/css --mode 0775",
+    "prebuild": "mkdirp dist/app/partials --mode=0775 && mkdirp dist/app/css --mode=0775",
     "build": "yarn run build:scripts && yarn run build:css",
     "build:scripts": "cd dist/app && ../../node_modules/uglify-js/bin/uglifyjs ../../app/js/*.js ../../app/js/**/*.js --compress --mangle --source-map --output trip.min.js",
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
