--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.3.0",
+  "version": "1.3.1-rc.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
