--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.4.2-rc.1",
+  "version": "1.4.2-rc.2",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -60,7 +60,7 @@
     "bootstrap": "^3.4.0",
     "cf-blob.js": "^0.0.1",
     "html5-boilerplate": "^7.3.0",
-    "leaflet": "^1.6.0",
+    "leaflet": "~1.6.0",
     "leaflet-draw": "^1.0.4",
     "open-location-code": "google/open-location-code#^1.0.4",
     "pagedown": "baminteractive/PageDown#^1.1.0",
