--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.4.2",
+  "version": "1.5.0-rc.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -17,7 +17,7 @@
     "GPS"
   ],
   "resolutions": {
-    "ini": "^1.3.6"
+    "ini": "~1.3.6"
   },
   "devDependencies": {
     "copyfiles": "^2.1.1",
@@ -57,15 +57,15 @@
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.2.0",
     "angular-validation-match": "^1.9.0",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "~3.4.0",
     "cf-blob.js": "^0.0.1",
-    "html5-boilerplate": "^7.3.0",
+    "html5-boilerplate": "~7.3.0",
     "leaflet": "~1.6.0",
     "leaflet-draw": "^1.0.4",
     "open-location-code": "google/open-location-code#^1.0.4",
     "pagedown": "baminteractive/PageDown#^1.1.0",
     "proj4": "^2.4.4",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "~2.4.0",
     "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
     "ui-leaflet-draw": "0.0.5",
     "zxcvbn": "^4.4.2"
