--- a/package.json
+++ b/package.json
@@ -62,11 +62,11 @@
     "html5-boilerplate": "~7.3.0",
     "leaflet": "~1.6.0",
     "leaflet-draw": "^1.0.4",
-    "open-location-code": "git+https://github.com/google/open-location-code#1.0.4",
-    "pagedown": "git+https://github.com/baminteractive/PageDown.git#1.1.0",
+    "open-location-code": "git+https://github.com/google/open-location-code.git#1.0.4",
+    "pagedown": "git+https://github.com/frankdean/PageDown.git#1.1.0-fix.1",
     "proj4": "^2.4.4",
     "socket.io-client": "~2.4.0",
-    "ui-leaflet": "https://www.fdsd.co.uk/trip-server/download/ui-leaflet-1.0.4-rc.1.tar.gz",
+    "ui-leaflet": "git+https://github.com/frankdean/ui-leaflet.git#v1.0.4-rc.2",
     "ui-leaflet-draw": "0.0.5",
     "zxcvbn": "^4.4.2"
   },
