--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.6.1-rc.2",
+  "version": "1.6.1-rc.3",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -17,7 +17,6 @@
     "GPS"
   ],
   "resolutions": {
-    "engine.io-client": "~3.5.2",
     "ua-parser-js": "^0.7.24"
   },
   "devDependencies": {
@@ -25,7 +24,7 @@
     "cssmin": "^0.4.3",
     "jasmine-core": "^3.6.0",
     "jshint": "^2.9.1",
-    "karma": "^5.1.0",
+    "karma": "6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
@@ -67,7 +66,7 @@
     "open-location-code": "git+https://github.com/google/open-location-code.git#1.0.4",
     "pagedown": "git+https://github.com/frankdean/PageDown.git#1.1.0-fix.1",
     "proj4": "^2.4.4",
-    "socket.io-client": "~2.4.0",
+    "socket.io-client": "^3.1.0",
     "ui-leaflet": "git+https://github.com/frankdean/ui-leaflet.git#v1.0.4-rc.2",
     "ui-leaflet-draw": "0.0.5",
     "zxcvbn": "^4.4.2"
