--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.6.1-rc.3",
+  "version": "1.6.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,15 +16,13 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {
-    "ua-parser-js": "^0.7.24"
-  },
+  "resolutions": {},
   "devDependencies": {
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
     "jasmine-core": "^3.6.0",
     "jshint": "^2.9.1",
-    "karma": "6.3.2",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
