--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -18,6 +18,7 @@
   ],
   "resolutions": {},
   "devDependencies": {
+    "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
     "jasmine-core": "^3.6.0",
@@ -34,6 +35,7 @@
     "q": "^1.4.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.1",
+    "tar": "^6.1.6",
     "uglify-js": "^3.5.0"
   },
   "dependencies": {
@@ -82,6 +84,7 @@
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "$npm_execpath install",
     "update-webdriver-chrome-XX.x.xxxx.xx": "webdriver-manager update --versions.chrome=XX.x.xxxx.xx",
+    "update-webdriver-90": "webdriver-manager update --versions.chrome=90.0.4430.212",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "$npm_execpath run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
@@ -102,8 +105,8 @@
     "build:css": "cssmin app/css/app.css > dist/app/css/app.css && cssmin app/css/ie10-viewport-bug-workaround.css > dist/app/css/ie10-viewport-bug-workaround.css",
     "dist": "copyfiles 'app/node_modules/leaflet/dist/leaflet.js' 'app/node_modules/leaflet/dist/images/*.png' 'app/node_modules/leaflet-draw/dist/leaflet.draw.js' 'app/node_modules/leaflet-draw/dist/images/*' 'app/node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js' 'app/node_modules/zxcvbn/dist/zxcvbn.js.map' 'app/node_modules/socket.io-client/dist/socket.io.js*' 'app/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' 'app/node_modules/**/*.min.js' 'app/node_modules/**/*.min.js.map' 'app/node_modules/angular-i18n/angular-locale_en-gb.js' 'app/node_modules/pagedown/*.js' 'app/node_modules/proj4/dist/*.js' 'app/node_modules/pagedown/*.png' 'app/node_modules/ui-leaflet/**/*.min.no-header.js' 'app/node_modules/**/*.css' 'app/node_modules/**/*.css.map' 'app/css/*.min.css' 'app/index*.html' 'app/partials/*.html' 'app/js/**/*.js' dist",
     "post-dist": "node -e \"const shell = require('shelljs'); shell.mv('dist/app/index-async.html', 'dist/app/index.html'); shell.rm('-f', 'dist/app/index-dev.html')\"",
-    "tar-release": "node -e \"const shell = require('shelljs'); shell.cd('dist'); shell.exec('tar -zcf ${npm_package_name}-release-v${npm_package_version}.tgz app')\"",
-    "zip-release": "node -e \"const shell = require('shelljs'); shell.cd('dist'); shell.exec('zip -qr ${npm_package_name}-release-v${npm_package_version}.zip app')\"",
+    "tar-release": "node -e \"require('shelljs').cd('dist'); require('tar').c({gzip: true, sync: true, file: '${npm_package_name}-release-v${npm_package_version}.tgz'},['app'])\"",
+    "zip-release": "node -e \"require('shelljs').cd('dist');const Zip=require('adm-zip');const zip=new Zip();zip.addLocalFolder('app','app');zip.writeZip('${npm_package_name}-release-v${npm_package_version}.zip');\"",
     "build-release": "$npm_execpath run disable-debug && $npm_execpath run disable-debug-logging && $npm_execpath run clean && $npm_execpath run build && $npm_execpath run dist && $npm_execpath run update-index-prod && $npm_execpath run dist-update-index-async && $npm_execpath run update-index-async-prod && $npm_execpath run post-dist && $npm_execpath run tar-release && $npm_execpath run zip-release && $npm_execpath run enable-debug && $npm_execpath run enable-debug-logging"
   }
 }
