--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.8.0",
+  "version": "1.8.1-rc.2",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,8 +16,7 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {
-  },
+  "resolutions": {},
   "devDependencies": {
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
